--- a/README
+++ b/README
@@ -14,6 +14,10 @@
 
   docker run -it --name oracle-xe-linux -p 1521:1521 -p 5500:5500 oracle-xe-linux bash
 
+  OU (se fez o pull da imagem)
+
+  docker run -it --name oracle-xe-linux -p 1521:1521 -p 5500:5500 wagnerpires/oracle-xe-linux bash
+
 - ETAPA QUE CONFIGURA E CRIA A SENHA PARA ACESSO AO DB
 
   /etc/init.d/oracle-xe-21c configure
